# wago_modbus_coupler_shm

./: .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  define.cmake  warnings.cmake
.github/workflows/: clang-format.yml
libs/: CMakeLists.txt
src/: CMakeLists.txt  Modbus_TCP_Server.cpp  Modbus_TCP_Server.hpp  Print_Time.cpp  Print_Time.hpp  WAGO_MB_Clamps.cpp  WAGO_MB_Clamps.hpp  WAGO_MB_TCP_Coupler.cpp  WAGO_MB_TCP_Coupler.hpp  endian.hpp  license.cpp  license.hpp  main.cpp
test/: CMakeLists.txt
